--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-coveralls": "^0.1.3",
-    "gulp-istanbul": "^0.6.0",
+    "gulp-istanbul": "^0.10.2",
     "gulp-mocha": "^2.0.0",
     "rimraf": "^2.3.2",
-    "should": "^5.0.0"
+    "should": "^7.1.1"
   },
   "dependencies": {
-    "camel-case": "~1.1.1"
+    "camel-case": "^1.2.0"
   }
 }
