--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
   },
   "homepage": "https://github.com/javiercejudo/betterer",
   "devDependencies": {
-    "gulp": "3.9.0",
-    "gulp-coveralls": "0.1.4",
-    "gulp-istanbul": "0.6.0",
-    "gulp-mocha": "2.1.3",
-    "rimraf": "2.4.3",
-    "should": "7.1.0"
+    "gulp": "^3.9.0",
+    "gulp-coveralls": "^0.1.4",
+    "gulp-istanbul": "^0.10.2",
+    "gulp-mocha": "^2.1.3",
+    "rimraf": "^2.4.3",
+    "should": "^7.1.1"
   },
   "dependencies": {
-    "camel-case": "1.1.2"
+    "camel-case": "^1.2.0"
   }
 }
